force-app/main/default/objects/SurveyCampaign__c/SurveyCampaign__c.object-meta.xml
<CustomObject>
    <description>Survey Campaign</description>
    <label>Survey Campaign</label>
    <nameField>
        <label>Survey Campaign</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyCampaign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>