force-app/main/default/objects/SurveyCampaign__c/fields/Accept_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>Accept_Call_Back__c</fullName>
    <inlineHelpText>คุณต้องการให้เจ้าหน้าที่ Abbott Cares ให้ข้อมูลผลิตภัณฑ์เพิ่มหรือไม่</inlineHelpText>
    <label>AcceptCallBack</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need</fullName>
                <label>ต้องการ</label>
            </value>
            <value>
                <fullName>NoNeed</fullName>
                <label>ไม่ต้องการ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>