force-app/main/default/objects/SurveyCampaign__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address</description>
    <label>Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>