force-app/main/default/objects/SurveyCampaign__c/fields/AdrDistrinct__c.field-meta.xml
<CustomField>
    <fullName>AdrDistrinct__c</fullName>
    <description>Address Distrinct</description>
    <label>AdrDistrinct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>