force-app/main/default/objects/SurveyCampaign__c/fields/AdrProvince__c.field-meta.xml
<CustomField>
    <fullName>AdrProvince__c</fullName>
    <description>Address Province</description>
    <label>AdrProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>