force-app/main/default/objects/SurveyCampaign__c/fields/AdrRoad__c.field-meta.xml
<CustomField>
    <fullName>AdrRoad__c</fullName>
    <description>Address Road</description>
    <label>AdrRoad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>