force-app/main/default/objects/SurveyCampaign__c/fields/AdrSoi__c.field-meta.xml
<CustomField>
    <fullName>AdrSoi__c</fullName>
    <description>Address Soi</description>
    <label>AdrSoi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>