force-app/main/default/objects/SurveyCampaign__c/fields/AdrSubDistrinct__c.field-meta.xml
<CustomField>
    <fullName>AdrSubDistrinct__c</fullName>
    <description>Address SubDistrinct</description>
    <label>AdrSubDistrinct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>