force-app/main/default/objects/SurveyCampaign__c/fields/AdrZipCode__c.field-meta.xml
<CustomField>
    <fullName>AdrZipCode__c</fullName>
    <description>Address ZipCode</description>
    <label>AdrZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>