force-app/main/default/objects/SurveyCampaign__c/fields/Brand_and_Product__c.field-meta.xml
<CustomField>
    <fullName>Brand_and_Product__c</fullName>
    <label>Brand and Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Protinex</fullName>
            </value>
            <value>
                <fullName>Anlene</fullName>
            </value>
            <value>
                <fullName>Boost Optimum</fullName>
            </value>
            <value>
                <fullName>Once Complete</fullName>
            </value>
            <value>
                <fullName>Blendera</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
            <value>
                <fullName>Boost Care</fullName>
            </value>
            <value>
                <fullName>Gen-DM</fullName>
            </value>
            <value>
                <fullName>Once Pro</fullName>
            </value>
            <value>
                <fullName>Nepro</fullName>
            </value>
            <value>
                <fullName>Once Dialyze</fullName>
            </value>
            <value>
                <fullName>Once Renal</fullName>
            </value>
            <value>
                <fullName>Prosure</fullName>
            </value>
            <value>
                <fullName>Oral Impact</fullName>
            </value>
            <value>
                <fullName>Neo-Mune</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>