force-app/main/default/objects/SurveyCampaign__c/fields/Buy_Product_For__c.field-meta.xml
<CustomField>
    <fullName>Buy_Product_For__c</fullName>
    <description>Buy Product For</description>
    <label>Buy Product For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Myself</fullName>
                <label>ตัวเอง</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>คนที่คุณรัก (บุคคลอื่น)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>