force-app/main/default/objects/SurveyCampaign__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <description>CampaignID</description>
    <displayFormat>CP# {00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Campaign ID</label>
    <type>AutoNumber</type>
</CustomField>