force-app/main/default/objects/SurveyCampaign__c/fields/CR__c.field-meta.xml
<CustomField>
    <fullName>CR__c</fullName>
    <description>CR</description>
    <label>CR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>