force-app/main/default/objects/SurveyCampaign__c/fields/Current_Used_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Used_Product__c</fullName>
    <description>Current Used Product</description>
    <label>Current Used Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Preferred_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ensure_Current</fullName>
                <label>อาหารสูตรครบถ้วน</label>
            </value>
            <value>
                <fullName>Glucerna SR_Current</fullName>
                <label>อาหารทดแทนสำหรับผู้ป่วยเบาหวาน</label>
            </value>
            <value>
                <fullName>Nepro HP_Current</fullName>
                <label>อาหารสูตรสำหรับผู้ป่วยล้างไต</label>
            </value>
            <value>
                <fullName>Prosure_Current</fullName>
                <label>อาหารสูตรครบถ้วนให้โปรตีนและอีพีเอสูง สำหรับผู้ป่วยที่มีปัญหาน้ำหนักตัวลดลง</label>
            </value>
            <value>
                <fullName>No_Current</fullName>
                <label>ไม่มี</label>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
            <value>
                <fullName>Nepro</fullName>
            </value>
            <value>
                <fullName>Prosure</fullName>
            </value>
            <value>
                <fullName>Protinex</fullName>
            </value>
            <value>
                <fullName>Anlene</fullName>
            </value>
            <value>
                <fullName>Boost Optimum</fullName>
            </value>
            <value>
                <fullName>Once Complete</fullName>
            </value>
            <value>
                <fullName>Blendera</fullName>
            </value>
            <value>
                <fullName>Boost Care</fullName>
            </value>
            <value>
                <fullName>Gen-DM</fullName>
            </value>
            <value>
                <fullName>Once Pro</fullName>
            </value>
            <value>
                <fullName>Once Dialyze</fullName>
            </value>
            <value>
                <fullName>Once Renal</fullName>
            </value>
            <value>
                <fullName>Oral Impact</fullName>
            </value>
            <value>
                <fullName>Neo-Mune</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>