force-app/main/default/objects/SurveyCampaign__c/fields/Date_Of_Birth_For__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_For__c</fullName>
    <description>Date Of Birth For</description>
    <label>Date Of Birth For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Kid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>