force-app/main/default/objects/SurveyCampaign__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>กรอกคำตอบร่วมกิจกรรมที่นี่</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>