force-app/main/default/objects/SurveyCampaign__c/fields/Line_Contact__c.field-meta.xml
<CustomField>
    <fullName>Line_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line Contact</description>
    <label>Line Contact</label>
    <referenceTo>MINTEL_Line_Contact__c</referenceTo>
    <relationshipLabel>SurveyCampaign</relationshipLabel>
    <relationshipName>SurveyCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>