force-app/main/default/objects/SurveyCampaign__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <description>Line ID</description>
    <externalId>true</externalId>
    <label>MID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>