force-app/main/default/objects/SurveyCampaign__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>Name</description>
    <label>Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>