force-app/main/default/objects/SurveyCampaign__c/fields/PhoneNo__c.field-meta.xml
<CustomField>
    <fullName>PhoneNo__c</fullName>
    <description>Phone No.</description>
    <label>Phone No.</label>
    <type>Phone</type>
</CustomField>