force-app/main/default/objects/SurveyCampaign__c/fields/Recently_Survey_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Recently_Survey_Campaign__c</fullName>
    <label>Recently Survey Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>