force-app/main/default/objects/SurveyCampaign__c/fields/Remark_Product__c.field-meta.xml
<CustomField>
    <fullName>Remark_Product__c</fullName>
    <label>Remark Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>