force-app/main/default/objects/SurveyCampaign__c/fields/Surname__c.field-meta.xml
<CustomField>
    <fullName>Surname__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>Surname</description>
    <label>Surname</label>
    <length>150</length>
    <type>Text</type>
</CustomField>