force-app/main/default/objects/SurveyCampaign__c/recordTypes/Gain_Friends.recordType-meta.xml
<RecordType>
    <fullName>Gain_Friends</fullName>
    <active>true</active>
    <label>Gain Friends</label>
</RecordType>