force-app/main/default/objects/SurveyCampaign__c/recordTypes/Gain_Friends_General_form.recordType-meta.xml
<RecordType>
    <fullName>Gain_Friends_General_form</fullName>
    <active>true</active>
    <label>Gain Friends (General form)</label>
</RecordType>