force-app/main/default/objects/SurveyCampaign__c/recordTypes/Mission_Sticker.recordType-meta.xml
<RecordType>
    <fullName>Mission_Sticker</fullName>
    <active>true</active>
    <label>Mission Sticker</label>
</RecordType>